--- a/app/assets/stylesheets/2/main.css
+++ b/app/assets/stylesheets/2/main.css
@@ -4455,7 +4455,7 @@ left: 0px;
 
 .product-beauty { height:300px; line-height: 300px; display: flex; align-items: center; overflow:hidden; padding:1px; vertical-align:middle; text-align:center; }
 .product-beauty a { margin:auto !important; vertical-align:middle; display:inline-block; }
-.product-beauty img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; }
+.product-beauty img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; width: 100%;}
 
 .product-image-wrapper { height:360px !important; line-height: 360px !important; display: flex; align-items: center !important; overflow:hidden !important; padding:1px; vertical-align:middle !important; text-align:center !important; }
 .product-image-wrapper img { max-height:360px !important; margin:auto !important; vertical-align:middle !important; display:inline-block !important; }
@@ -4463,4 +4463,4 @@ left: 0px;
 
 .product-beauty2 { height: 273px; line-height: 300px; display: flex; align-items: center; overflow:hidden; padding:1px; vertical-align:middle; text-align:center; }
 .product-beauty2 a { margin:auto !important; vertical-align:middle; display:inline-block; }
-.product-beauty2 img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; }
+.product-beauty2 img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; width: 100%;}
