--- a/app/assets/stylesheets/3/style.css
+++ b/app/assets/stylesheets/3/style.css
@@ -4549,7 +4549,7 @@ ul#products li .price { height: 38px; }
 
 .product-law { height:300px; line-height: 300px; display: flex; align-items: center; overflow:hidden; padding:1px; vertical-align:middle; text-align:center; }
 .product-law a { margin:auto !important; vertical-align:middle; display:inline-block; }
-.product-law img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; }
+.product-law img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; width: 100%}
 
 .product-image-wrapper { height:360px !important; line-height: 360px !important; display: flex; align-items: center !important; overflow:hidden !important; padding:1px; vertical-align:middle !important; text-align:center !important; }
 .product-image-wrapper img { max-height:360px !important; margin:auto !important; vertical-align:middle !important; display:inline-block !important; }
