--- a/app/assets/stylesheets/5/main.css
+++ b/app/assets/stylesheets/5/main.css
@@ -8736,7 +8736,7 @@ float: left;
 
 .product-doc { height:300px; line-height: 300px; display: flex; align-items: center; overflow:hidden; padding:1px; vertical-align:middle; text-align:center; }
 .product-doc a { margin:auto !important; vertical-align:middle; display:inline-block; }
-.product-doc img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; }
+.product-doc img { max-height:300px; margin:auto; vertical-align:middle; display:inline-block; width: 100%;}
 
 .product-image-wrapper { height:360px !important; line-height: 360px !important; display: flex; align-items: center !important; overflow:hidden !important; padding:1px; vertical-align:middle !important; text-align:center !important; }
 .product-image-wrapper img { max-height:360px !important; margin:auto !important; vertical-align:middle !important; display:inline-block !important; }
